src/test/ui/resolve/issue-5035-2.stderr
error[E0277]: `I + 'static` does not have a constant size known at compile-time
  --> $DIR/issue-5035-2.rs:14:8
   |
LL | fn foo(_x: K) {}
   |        ^^ `I + 'static` does not have a constant size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `I + 'static`
   = note: all local variables must have a statically known size

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
